--- a/index.html
+++ b/index.html
@@ -9,27 +9,33 @@
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
-     <!-- Google Fonts -->
-     <link rel="preconnect" href="https://fonts.googleapis.com">
-     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-     <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
+     <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
      <!-- Custom CSS -->
      <link rel="stylesheet" href="styles.css">
 
-     <!-- Custom JS -->
-     <script src="index.js"></script>
+     <!-- Main Image -->
+     <link rel="preload" as="image" href="kyle-glenn-SrASYZZpyjw-unsplash.jpg">
 </head>
 <body>
     <div class="container-fluid">
         <div class="row vh-100">
-            <div class="col col-12 d-flex flex-column g-0">
-                <nav class="navbar navbar-dark navbar-expand-md bg-dark position-absolute w-100">
+            <div class="col col-12 d-flex flex-column g-0 h-100">
+
+                <!-- Navbar -->
+                <nav class="navbar navbar-dark navbar-expand-lg">
+
+                    <!-- Expandable Menu -->
                     <div class="container-fluid">
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-content">
+
+                        <!-- Navbar Expand Button -->
+                        <button class="navbar-toggler" type="button" data-bs-target="#navbar-menu" data-bs-toggle="collapse">
                             <span class="navbar-toggler-icon"></span>
                         </button>
-                        <div id="navbar-content" class="collapse navbar-collapse">
+
+                        <!-- Menu Links -->
+                        <div id="navbar-menu" class="collapse navbar-collapse">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">About Us</a>
@@ -39,52 +45,81 @@
                                 </li>
                             </ul>
                         </div>
+
                     </div>
+
                 </nav>
-                <div class="d-flex justify-content-center align-items-center flex-grow-1 image-container">
-                    <p id="image-text">
-                        <span>MYSTERIES</span>
-                        <span>&</span>
-                        <span>ENIGMAS</span>
-                    </p>
+
+                <!-- Main Image Container -->
+                <div class="flex-grow-1 main-image-container">
+
+                    <!-- Main Image -->
+                    <img class="main-image" src="./images/kyle-glenn-SrASYZZpyjw-unsplash.jpg" alt="">
+
+                    <!-- Main Image Text -->
+                    <div class="main-image-text">
+                        <p class="main-image-caption">
+                            <span>MYSTERIES</span>
+                            <span>&</span>
+                            <span>ENIGMAS</span>
+                        </p>
+                        <p class="main-image-info-text">
+                            The world is full of mysteries.
+                        </p>
+                        <button class="btn-join" type="button">
+                            Join the hunt for answers
+                        </button>
+                    </div>
+                    
+
                 </div>
+
             </div>
         </div>
-        <div class="row px-2 pb-4 bg-dark info-section">
-            <div class="col col-12 pt-4">
-                <div class="info-div">
-                    <div class="info-image-container">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/1/1f/Mary_Celeste_as_Amazon_in_1861_%28cropped%29.jpg" alt="Painting of the Mary Celeste" height="100%">
+
+        <div class="row info-row">
+            <div class="col col-12 col-md-6 g-0 mb-4 info-section">
+                <div class="h-100">
+                    <div class="info-img-container">
+                        <img src="./images/mary_celeste.jpg" alt="Painting of the Mary Celeste">
                     </div>
                     <p>
                         On December 4, 1872, the <i>Mary Celeste</i> was found in working condition, but inexplicably abandoned by her crew. The fate of the crew and their reason for abandoning ship remain unknown to this day.
                     </p>
                 </div>
             </div>
-            <div class="col col-12 pt-4">
-                <div class="info-div">
-                    <div class="info-image-container">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/7/71/Dyatlov_Pass_incident_02.jpg" alt="Tents discovered by the search party investigating the Dyatlov Pass incedent" height="100%">
+
+            <div class="col col-12 col-md-6 g-0 mb-4 info-section">
+                <div class="h-100">
+                    <div class="info-img-container">
+                        <img src="./images/dyatlov_pass_incident.jpg" alt="Rescue team discovering the tents of the Dyatlov expedition">
                     </div>
-                    <p>On January 25, 1959, a group of hikes set out on a trek across the Ural mountains, led by Igor Dyatlov. All members od the expedition died under seemingly mysterious circumstances.</p>
+                    <p>
+                        On January 25, 1959, a group of hikers set out on a trek across the Ural mountains, led by Igor Dyatlov. All members of the expedition died under mysterious circumstances.
+                    </p>
                 </div>
             </div>
-            <div class="col col-12 pt-4">
-                <div class="info-div">
-                    <div class="info-image-container">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4a/Bella_graffiti.jpg/800px-Bella_graffiti.jpg" alt="Graffiti reading: 'Who put Bella in the wych elm'" height="100%">
+
+            <div class="col col-12 col-md-6 g-0 mb-4 info-section">
+                <div class="h-100">
+                    <div class="info-img-container">
+                        <img src="./images/bella_graffiti.jpg" alt="Graffiti reading: 'Who put Bella in the witch elm?'">
                     </div>
-                    <p>On April 18, 1943, four boys discovered a body in the hollow trunk of a wych elm in Hagley Wood. The following year, graffiti reading 'Who put Bella down the Wych Elm?' appeared on a wall in Upper Dean Street, Birmingham.</p>
+                    <p>
+                        On April 18, 1943, four boys discovered a body in the hollow trunk of a wych elm in Hagley Wood. The following year, graffiti reading 'Who put Bella down the Wych Elm?' appeared on a wall in Upper Dean Street, Birmingham. The body has never been identified.
+                    </p>
                 </div>
             </div>
         </div>
-        <div class="row bg-dark">
-            <div class="col contact-info">
-                <p>
-                    Contact Info goes here
-                </p>
+
+        <div class="row contant-info">
+            <div class="col col-12 d-flex align-items-center gap-2 mt-4 p-2 g-0 contact-info">
+                Find us on:
+                <span class="bi bi-twitter social-icon"></span>
+                <span class="bi bi-instagram social-icon"></span>
             </div>
         </div>
+
     </div>
 </body>
 </html>
